# gwak

./: .gitignore  CNAME  README.md  Snakefile  config.py  config.yaml  environment.yaml  glitch_script.py  nohup.out  script.py  train_test_split.py
data/: LIGO_EVENT_TIMES.npy  O3a_Hanford_segments.json  O3a_Livingston_segments.json  O3a_intersections.npy  segments_intersection.py  sg.prior  sghf.prior  sglf.prior
data/v0/: info.txt
data/v1/: info.txt
data/v2/: info.txt
data/z85_sfho/: z85_sfho_phi0.000_theta0.000_16384Hz_hcross.txt  z85_sfho_phi0.000_theta0.000_16384Hz_hplus.txt  z85_sfho_phi0.000_theta0.680_16384Hz_hcross.txt  z85_sfho_phi0.000_theta0.680_16384Hz_hplus.txt  (+196 more)
libs/autoencoder_models/: pyproject.toml
libs/autoencoder_models/anomaly/autoencoder_models/: __init__.py  autoencoder_models.py  eric_models.py
libs/autoencoder_models/anomaly/autoencoder_models/models/: CNN.py  CNN3D.py  LSTM.py  dense.py  transformer.py
libs/datagen/: pyproject.toml
libs/datagen/anomaly/datagen/: __init__.py  generate_dataset.py  get_data_path.py  injection.py  injection_2d.py  nohup.out  polarization.npy  prior.prior  run_WNB.py  sngw_injection.py  timeslides.py  waveforms.py
libs/evaluation/: pyproject.toml
libs/evaluation/anomaly/evaluation/: QUAK_draw_boundaries.py  SN_updated_runthrough.py  __init__.py  autoencoder_prediction.py  eval_timeslides.py  kde.py  kde_analysis.py  kde_eval.py  kde_runthrough.py  nn_quak_runthrough.py  nohup.out  plotting.py  runthrough_KDE_FAR.py
libs/evaluation/anomaly/evaluation/detector_statistic_analysis/: burst_benchmark_run.py  eval_metric_on_data.py  justQUAK_param_ES.py  nohup.out  param_ES.py  param_ES_nopearson.py
libs/evaluation/anomaly/evaluation/plots/: loss_curve.py  metric_distributions.py
libs/evaluation/anomaly/evaluation/utils/: KDE_train.py  NN_predict.py  QUAK_predict.py  QUAK_stats.py  data_segment.py  pearson_QUAK_stats.py  pearson_QUAK_stats_v2.py  pearson_QUAK_stats_v3.py  pearson_corr.py  smooth.py
libs/pre_processing/: pyproject.toml
libs/pre_processing/anomaly/pre_processing/: __init__.py  pre_processing.py
libs/pre_processing/anomaly/pre_processing/processing_methods/: add.py  clipping.py  even_dim.py  expand_dim.py  fft_double.py  full.py  indiv_norm.py  indiv_norm_2d.py  log_and_norm.py  spectrogram.py  squeeze.py  tanh_norm.py
libs/training/: pyproject.toml
libs/training/anomaly/training/: __init__.py  train_LS.py  train_QUAK.py  train_model.py  train_perf_plot.py
libs/utils/: pyproject.toml
libs/utils/anomaly/utils/: QUAK_predict.py  __init__.py  data_segment.py
pipeline/: compile_runs.py  pipe_submit.sub  pipeline_main.py  pipeline_script.sh  pyproject.toml  reference.ini  run_all_SN_files.py
pipeline/outputs/: train4.stderr
scripts/: anomaly_recreation.py  autoencoder_model.py  autoencoder_prediction.py  constants.py  evaluate_data.py  evaluate_timeslides.py  evolutionary_search.py  fetch_data.py  final.npy  final_metric_optimization.py  full_data_runthrough.py  generate.py  glitch_script.py  helper_functions.py  merge_ae_predictions.py  merge_far_hist.py  models.py  nn_quak_runthrough.py  omicron.py  pearson.py  plotting.py  pre_processing.py  predict.py  predict_torch.py  quak_predict.py  rec_and_quak_plots.py  run_gwf_frames.py  run_omicron.py  segments_intersection.py  train_quak.py  train_quak_torch.py  train_test_split.py  validate_data.py
(+200 files in other folders)
