[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "documents to take in .ini file and run run entire pipeline, outputting graphs"
authors = ["ryan.raikman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy="^1.8.1"
"anomaly.pre_processing" = {path="../libs/pre_processing", develop=true}
"anomaly.training" = {path="../libs/training", develop=true}
"anomaly.evaluation" = {path="../libs/evaluation", develop=true}
"anomaly.utils" = {path="../libs/utils", develop=true}
matplotlib = "^3.5.2"
numpy = "^1.23.0"
sklearn = "^0.0"
setGPU = "^0.0.7"
tensorflow-gpu = "^2.9.1"
keras = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
