[tool.poetry]
name = "anomaly.autoencoder-models"
version = "0.1.0"
description = "various neural networks to train, does initialization"
authors = ["ryan.raikman"]
packages = [{include = "anomaly"}]

[tool.poetry.dependencies]
python = "^3.9"
keras = "^2.9.0"
numpy = "^1.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
