[tool.poetry]
name = "anomaly.datagen"
version = "0.1.0"
description = "configuring data for training autoencoders"
authors = ["ryan.raikman"]
packages = [
	{include="anomaly"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
h5py = "^3.7.0"
gwpy = "^2.1.4"
bilby = "^1.1.5"
lalsuite = "^7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
