[tool.poetry]
name = "anomaly.evaluation"
version = "0.1.0"
description = "data evaluation after autoencoder tarining"
authors = ["ryan.raikman"]
license = "MIT"
packages = [{include="anomaly"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.0"
keras = "^2.9.0"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
sklearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
