[tool.poetry]
name = "anomaly.pre-processing"
version = "0.0.1"
description = "pre-processing for data"
authors = ["ryan.raikman"]
license = "MIT"
packages = [{include = "anomaly"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.23.0"
scipy = "^1.8.1"
"anomaly.datagen" = {path="../datagen", develop = true}


[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
