[tool.poetry]
name = "anomaly.training"
version = "0.1.0"
description = "training library"
authors = ["ryan.raikman"]
license = "MIT"
packages = [{include = "anomaly"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"
keras = "^2.9.0"
"anomaly.autoencoder_models" = {path = "../autoencoder_models", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
