[tool.poetry]
name = "anomaly.utils"
version = "0.1.0"
description = "utils for general data evaluation"
authors = ["ryan.raikman"]
packages = [
	{include="anomaly"}
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
h5py = "^3.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
